--- a/AutoCmdb/templates/asset/asset_edit.html
+++ b/AutoCmdb/templates/asset/asset_edit.html
@@ -47,7 +47,7 @@
 
     <ol class="breadcrumb">
         <li><a href="{% url 'asset' %}">資產管理</a></li>
-        <li class="active">更改資產</li>
+        <li class="active">{{ asset_obj.name }}</li>
     </ol>
 
 
