--- a/AutoCmdb/templates/host/host_info.html
+++ b/AutoCmdb/templates/host/host_info.html
@@ -229,33 +229,93 @@
 
             <div class="tab-pane" id="tab_record">
 
-                <div class="panel panel-default " style="background-color: #f5f5f5;">
-                    123
 
+                {% for assset_record in asset_record_obj %}
 
-                </div>
+                    <div class="well">
+                        <div class="media">
+                            <a class="pull-left" href="#">
 
+                            </a>
+                            <div class="media-body">
+                                <h4 class="media-heading">{{ assset_record.create_date|date:'Y/m/d' }}</h4>
+                                <p class="text-right">{{ assset_record.get_assetrecord_type_id_display }}</p>
+                                <p>{{ assset_record.summary }}</p>
 
-
-                <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                    <div class="card-body">
-                        <h4 class="card-title">
-                            <a href="#">Item One</a>
-                        </h4>
-                        <h5>$24.99</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam
-                            aspernatur!</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <small class="text-muted">★ ★ ★ ★ ☆</small>
-                    </div>
-                </div>
+
+                {% endfor %}
+
 
             </div>
-            <div class="tab-panel" id="tab_repair">
 
-            </div>
+            <div class="tab-pane" id="tab_repair">
+
+
+                {% for asset_repair in asset_repair_obj %}
+                    <div class="well" >
+                        <div class="media">
+                            <a class="pull-left" href="#">
+                                <img class="media-object" height="150" width="150"
+                                     src="http://2.bp.blogspot.com/-U77ROceRfZ4/VBZUKz_wccI/AAAAAAAAAL8/CHcrtv2dIcQ/s1600/187785.jpeg">
+                            </a>
+                            <div class="media-body" style="margin-bottom: 20px">
+                                <h3 class="media-heading">
+                                    {{ asset_repair.title }}
+                                    <span class="badge badge-secondary">{{ asset_repair.status|yesno:'已處理,跟進中,None' }}</span>
+                                </h3>
+                                <p class="text-left"><span><i
+                                        style="color: black"
+                                        class="far fa-user"></i>{{ asset_repair.creator.code }}</span></p>
+                                <p>{{ asset_repair.summary }}</p>
+                                <p>{{ asset_repair.summary }}</p>
+
+                                <ul class="list-inline list-unstyled">
+
+
+                                    <li><span><i
+                                            class="glyphicon glyphicon-calendar"></i> {{ asset_repair.create_date |date:"Y/m/d" }} </span>
+                                    </li>
+                                    <li>|</li>
+                                    <li><span><i class="glyphicon glyphicon-wrench"></i>
+                                        {% for re in asset_repair_detail %}
+                                            {{ re.user.code }}
+                                        {% endfor %}
+                                    </span></li>
+
+                                    <li>|</li>
+                                    <span><i class="glyphicon glyphicon-comment"></i> {{ asset_repair_detail|length }} comments</span>
+
+
+                                </ul>
+
+
+
+
+                            </div>
+
+                            {% for ass_re in asset_repair_detail %}
+                                <div class="panel panel-primary">
+                                    <div class="panel-heading">
+                                        <strong>{{ ass_re.user.code }}</strong>
+                                    </div>
+                                    <div class="panel-body">
+                                     {{ ass_re.content }}
+                                        <p
+                                            class="text-right">{{ ass_re.create_date|date:'Y/m/d' }}</p>
+                                    </div><!-- /panel-body -->
+                                </div><!-- /panel panel-default -->
+
+
+                            {% endfor %}
+
+                        </div>
+                    </div>
+
+                    </div>
+                {% endfor %}
 
 
         </div>
