--- a/AutoCmdb/templates/host/host_info.html
+++ b/AutoCmdb/templates/host/host_info.html
@@ -51,6 +51,7 @@
         <div id="myTabContent" class="tab-content">
 
 
+            <!-- /硬件信息 Tab -->
             <div class="tab-pane fade in active" id="tab_host">
 
                 <div class="form-group">
@@ -227,6 +228,7 @@
             </div>
 
 
+            <!-- /更变纪录 Tab -->
             <div class="tab-pane" id="tab_record">
 
 
@@ -251,76 +253,103 @@
 
             </div>
 
+
+            <!-- /維修紀錄 Tab -->
             <div class="tab-pane" id="tab_repair">
 
 
                 {% for asset_repair in asset_repair_obj %}
-                    <div class="well" >
+                    <div class="well">
                         <div class="media">
-                            <a class="pull-left" href="#">
-                                <img class="media-object" height="150" width="150"
-                                     src="http://2.bp.blogspot.com/-U77ROceRfZ4/VBZUKz_wccI/AAAAAAAAAL8/CHcrtv2dIcQ/s1600/187785.jpeg">
-                            </a>
-                            <div class="media-body" style="margin-bottom: 20px">
-                                <h3 class="media-heading">
-                                    {{ asset_repair.title }}
-                                    <span class="badge badge-secondary">{{ asset_repair.status|yesno:'已處理,跟進中,None' }}</span>
-                                </h3>
-                                <p class="text-left"><span><i
-                                        style="color: black"
-                                        class="far fa-user"></i>{{ asset_repair.creator.code }}</span></p>
-                                <p>{{ asset_repair.summary }}</p>
-                                <p>{{ asset_repair.summary }}</p>
 
-                                <ul class="list-inline list-unstyled">
+                            <div id="post">
+                                <a class="pull-left" href="#" style="margin-right: 20px">
+                                    <img class="media-object" height="150" width="150"
+                                         src="http://2.bp.blogspot.com/-U77ROceRfZ4/VBZUKz_wccI/AAAAAAAAAL8/CHcrtv2dIcQ/s1600/187785.jpeg">
+                                </a>
+                                <div class="media-body" style="margin-bottom: 20px;height: 150px">
+                                    <h3 class="media-heading">
+                                        {{ asset_repair.title }}
+                                        <span class="badge badge-secondary">{{ asset_repair.status|yesno:'已處理,跟進中,None' }}</span>
+                                    </h3>
+                                    <p class="text-left"><span><i
+                                            style="color: black"
+                                            class="far fa-user"></i> {{ asset_repair.creator.code }}</span></p>
+                                    <p>{{ asset_repair.summary }}</p>
 
 
-                                    <li><span><i
-                                            class="glyphicon glyphicon-calendar"></i> {{ asset_repair.create_date |date:"Y/m/d" }} </span>
-                                    </li>
-                                    <li>|</li>
-                                    <li><span><i class="glyphicon glyphicon-wrench"></i>
-                                        {% for re in asset_repair_detail %}
-                                            {{ re.user.code }}
-                                        {% endfor %}
+                                    <ul class="list-inline list-unstyled">
+
+                                        <li><span><i
+                                                class="glyphicon glyphicon-calendar"></i> {{ asset_repair.create_date |date:"Y/m/d" }} </span>
+                                        </li>
+                                        <li>|</li>
+                                        <li><span><i class="glyphicon glyphicon-wrench"></i>
+                                            {% for re in asset_repair_detail %}
+                                                {{ re.user.code }}
+                                            {% endfor %}
                                     </span></li>
 
-                                    <li>|</li>
-                                    <span><i class="glyphicon glyphicon-comment"></i> {{ asset_repair_detail|length }} comments</span>
+                                        <li>|</li>
+                                        <span onclick="show_reply($(this))"><i
+                                                class="glyphicon glyphicon-comment "></i> {{ asset_repair_detail|length }} comments</span>
+
+                                    </ul>
 
 
-                                </ul>
+                                </div>
+                            </div>
+
+                            <div id="reply">
+                                {% for ass_re in asset_repair_detail %}
+                                    <div class="panel panel-primary">
+                                        <div class="panel-heading">
+                                            <strong><i class="far fa-user"></i> {{ ass_re.user.code }}</strong>
+                                        </div>
+                                        <div class="panel-body">
+                                            {{ ass_re.content }}
+                                            <p class="text-right">{{ ass_re.create_date|date:'Y/m/d H:i' }}</p>
+                                        </div><!-- /panel-body -->
+                                    </div><!-- /panel panel-default -->
 
 
 
+                                {% endfor %}
 
                             </div>
 
-                            {% for ass_re in asset_repair_detail %}
-                                <div class="panel panel-primary">
+
+
+                            {% if not asset_repair.status %}
+                                <div class="panel " style="border-color:black">
                                     <div class="panel-heading">
-                                        <strong>{{ ass_re.user.code }}</strong>
+                                        <strong>添加一條新回覆</strong>
                                     </div>
-                                    <div class="panel-body">
-                                     {{ ass_re.content }}
-                                        <p
-                                            class="text-right">{{ ass_re.create_date|date:'Y/m/d' }}</p>
+                                    <div class="panel-body" id="reply_post">
+
+                                    <textarea class="form-control" name="content" maxlength="10000"
+                                              style="overflow: hidden; overflow-wrap: break-word; resize: none; height: 100px"></textarea>
+
+                                        <input name="userid" value="{{ request.user.userprofile.id }}"
+                                               style="display: none">
+                                        <input name="repairid" value="{{ asset_repair.id }}"
+                                               style="display: none">
+                                        <button id='reply_btn' class="btn" style="margin-top: 15px" onclick="reply()">回覆
+                                        </button>
                                     </div><!-- /panel-body -->
-                                </div><!-- /panel panel-default -->
+                                </div>
+                            {% endif %}
 
-
-                            {% endfor %}
 
                         </div>
-                    </div>
 
                     </div>
                 {% endfor %}
 
 
+            </div>
+
         </div>
-
-
     </div>
 {% endblock %}
 
@@ -331,6 +360,21 @@
 
 
     <script>
+
+        var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
+
+        function csrfSafeMethod(method) {
+            // these HTTP methods do not require CSRF protection
+            return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+        }
+
+        $.ajaxSetup({
+            beforeSend: function (xhr, settings) {
+                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                }
+            }
+        });
 
         var inputs = $("input");
         $.each(inputs, function (i, obj) {
@@ -360,6 +404,59 @@
         $(document).ready(function () {
             $('#host').collapse();
         });
+
+
+        //  Reply : Change icon
+        function reply(ele) {
+
+
+            user = $("#reply_post [name='userid']").val();
+            repair = $("#reply_post [name='repairid']").val();
+            content = $("#reply_post [name='content']").val();
+
+            console.log(user);
+
+            data = {
+                csrfmiddlewaretoken: '{{ csrf_token }}',
+                content: content,
+                user: user,
+                repair: repair,
+
+            };
+
+            $.ajax({
+
+                url: "{% url 'asset_repair_detail' %}",
+                data: data,
+                type: 'POST',
+                async: false,
+                success: function (callback) {
+                    console.log(callback);
+                    console.log(callback.data);
+
+                    if (callback.status == 'ok') {
+
+                        $("#reply").append('<div class="panel panel-primary"><div class="panel-heading"><i class="far fa-user"></i> <strong>' + callback.data.user + '</strong></div><div class="panel-body">' + callback.data.content + '<p class="text-right">' + callback.data.date + '</p></div></div>');
+                        $("#reply_post [name='content']").val("");
+
+
+                    }
+
+                },
+                error: function () {
+                    put_status = false
+
+                }
+
+            });
+
+        }
+
+        function show_reply(ele) {
+            {#console.log($(this));#}
+            $('#reply').toggleClass('hide');
+
+        }
 
 
     </script>
