--- a/AutoCmdb/templates/base.html
+++ b/AutoCmdb/templates/base.html
@@ -24,6 +24,12 @@
     <script src="/static/js/all.js"></script>
 
 
+
+    <link href="/static/css/custom.css" rel="stylesheet">
+
+
+
+
     {% block head %}
     {% endblock %}
 
