--- a/AutoCmdb/templates/host/host_info.html
+++ b/AutoCmdb/templates/host/host_info.html
@@ -270,7 +270,15 @@
                                 <div class="media-body" style="margin-bottom: 20px;height: 150px">
                                     <h3 class="media-heading">
                                         {{ asset_repair.title }}
-                                        <span class="badge badge-secondary">{{ asset_repair.status|yesno:'已處理,跟進中,None' }}</span>
+
+                                        {% if asset_repair.status %}
+                                            <span class="badge alert-success">已處理</span>
+                                        {% else %}
+
+                                            <span class="badge alert-danger">跟進中</span>
+                                        {% endif %}
+
+
                                     </h3>
                                     <p class="text-left"><span><i
                                             style="color: black"
@@ -285,6 +293,7 @@
                                         </li>
                                         <li>|</li>
                                         <li><span><i class="glyphicon glyphicon-wrench"></i>
+                                        <!--- TODO 只篩選資訊部 User Code -->
                                             {% for re in asset_repair_detail %}
                                                 {{ re.user.code }}
                                             {% endfor %}
@@ -300,7 +309,7 @@
                                 </div>
                             </div>
 
-                            <div id="reply">
+                            <div id="reply" class="hide">
                                 {% for ass_re in asset_repair_detail %}
                                     <div class="panel panel-primary">
                                         <div class="panel-heading">
@@ -316,30 +325,31 @@
 
                                 {% endfor %}
 
-                            </div>
 
 
 
-                            {% if not asset_repair.status %}
-                                <div class="panel " style="border-color:black">
-                                    <div class="panel-heading">
-                                        <strong>添加一條新回覆</strong>
-                                    </div>
-                                    <div class="panel-body" id="reply_post">
+
+                                {% if not asset_repair.status %}
+                                    <div class="panel " style="border-color:black">
+                                        <div class="panel-heading">
+                                            <strong>添加一條新回覆</strong>
+                                        </div>
+                                        <div class="panel-body" id="reply_post">
 
                                     <textarea class="form-control" name="content" maxlength="10000"
                                               style="overflow: hidden; overflow-wrap: break-word; resize: none; height: 100px"></textarea>
 
-                                        <input name="userid" value="{{ request.user.userprofile.id }}"
-                                               style="display: none">
-                                        <input name="repairid" value="{{ asset_repair.id }}"
-                                               style="display: none">
-                                        <button id='reply_btn' class="btn" style="margin-top: 15px" onclick="reply()">回覆
-                                        </button>
-                                    </div><!-- /panel-body -->
-                                </div>
-                            {% endif %}
-
+                                            <input name="userid" value="{{ request.user.userprofile.id }}"
+                                                   style="display: none">
+                                            <input name="repairid" value="{{ asset_repair.id }}"
+                                                   style="display: none">
+                                            <button id='reply_btn' class="btn" style="margin-top: 15px"
+                                                    onclick="reply()">回覆
+                                            </button>
+                                        </div><!-- /panel-body -->
+                                    </div>
+                                {% endif %}
+                            </div>
 
                         </div>
 
